# meals-on-wheels

./: .drone.yml  .env  .gitignore  README.md  meals-on-wheels.code-workspace  package-lock.json  package.json
.github/workflows/: check.yml
src/: App.js  error.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/cmd/: component.rs  global.rs  meal.rs  mod.rs
src-tauri/src/cmd/global/: get_available_months.rs  get_state.rs  mod.rs
src-tauri/src/data/: available_datasets.rs  available_months.rs  component.rs  meal.rs  mod.rs
src-tauri/src/flattened/: component.rs
src-tauri/src/interface/: component.rs
src/components/: ListEditor.js  SelectDataset.js  SelectMonth.js  SiteHeader.js
src/components/components/: Edit.js  EditModal.js  New.js  NewModal.js
src/components/meals/: New.js
src/locales/: de.json  en.json
src/views/: Components.js  Meals.js  SelectDataset.js
