[package]
name = "meals-on-wheels"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "meals-on-wheels"
edition = "2018"
build = "src/build.rs"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
directories = "3"
fs2 = "0.4"
lazy_static = "1.4"
ron = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "set-title" ] }
thiserror = "1.0"
uuid = { version = "0.8", features = [ "serde", "v4" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "meals-on-wheels"
path = "src/main.rs"
